Update documentation for GET /post and GET /profile/{username}/posts/new. Update output of GET /post and GET /profile/{username}/posts/new to standardized Post object